force-app/main/default/objects/npsp__Level__c/fields/npsp__Active__c.field-meta.xml
<CustomField>
    <fullName>npsp__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this Level is currently in use.</description>
    <inlineHelpText>Si este nivel esta en uso actualmente.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>