force-app/main/default/objects/npsp__Level__c/fields/npsp__Engagement_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>npsp__Engagement_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Engagement Plan Template to apply to the Target Object when this Level is achieved.</description>
    <inlineHelpText>La plantilla del plan de acción a aplicar al objeto destino cuando este nivel es alcanzado.</inlineHelpText>
    <label>Engagement Plan Template</label>
    <referenceTo>npsp__Engagement_Plan_Template__c</referenceTo>
    <relationshipLabel>Levels</relationshipLabel>
    <relationshipName>Levels</relationshipName>
    <type>Lookup</type>
</CustomField>