force-app/main/default/objects/npsp__Level__c/fields/npsp__Level_Field__c.field-meta.xml
<CustomField>
    <fullName>npsp__Level_Field__c</fullName>
    <description>Indicates which field to use on the target object to store the current Level.</description>
    <inlineHelpText>El campo (nombre de la Api) en el objecto destino donde se guarda la búsqueda al nivel actual. Tenga en cuenta que este campo implícitamente define la &quot;escalera&quot; de la que este nivel es parte.</inlineHelpText>
    <label>Level Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>