force-app/main/default/objects/npsp__Level__c/fields/npsp__Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>npsp__Minimum_Amount__c</fullName>
    <description>The minimum amount needed for NPSP to assign this Level. If this field is empty, then NPSP will assign this Level to any amount less than this Level&apos;s Maximum Amount.</description>
    <inlineHelpText>La cantidad menor para ser asignado a este nivel. Si esta vacío, cualquier cantidad menor a la cantidad máxima de este nivel será asignado a este nivel.</inlineHelpText>
    <label>Minimum Amount (&gt;=)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>